--- a/roles/k8s-master/tasks/main.yml
+++ b/roles/k8s-master/tasks/main.yml
@@ -98,18 +98,13 @@
   become_user: root
   when: not pki_status.stat.exists
 
-- debug:
-    msg: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:]  }}"
-
-- debug:
-    msg: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('')  }}"
 
 - debug:
     msg: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace('\', '',2) }}"
 
 - name: "Create join master fact"
   set_fact:
-    join_master: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace('\', '',2  }}"
+    join_master: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace('\', '',2)  }}"
   become: yes
   become_user: root
   when: not pki_status.stat.exists
