--- a/roles/k8s-master/tasks/main.yml
+++ b/roles/k8s-master/tasks/main.yml
@@ -86,7 +86,7 @@
 
 - name: "Create join master fact"
   set_fact:
-    join_master: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace ('\\', '') }}"
+    join_master: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace('\', '') }}"
   become: yes
   become_user: root
   when: pki_status.stat.exists
@@ -100,11 +100,11 @@
 
 
 - debug:
-    msg: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace('\', '',2) }}"
+    msg: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace('\', '') | replace('\', '') }}"
 
 - name: "Create join master fact"
   set_fact:
-    join_master: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace('\', '',2)  }}"
+    join_master: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace('\', '') | replace('\', '') }}"
   become: yes
   become_user: root
   when: not pki_status.stat.exists
