--- a/roles/k8s-master/tasks/main.yml
+++ b/roles/k8s-master/tasks/main.yml
@@ -99,13 +99,13 @@
   when: not pki_status.stat.exists
 
 - debug:
-    msg: '{{ kubeadm_init_message_not_exists.stdout_lines[-2:] |  map("regex_replace", ".* \\\\", "\1") | join("") }}'
+    msg: '{{ kubeadm_init_message_not_exists.stdout_lines[-2:] |  map("regex_replace", ".* \\", "\1") | join("") }}'
 
 - fail:
 
 - name: "Create join master fact"
   set_fact:
-    join_master: '{{ kubeadm_init_message_not_exists.stdout_lines[-2:] |  map("regex_replace", ".* \\\\", "\1") | join("") }}'
+    join_master: '{{ kubeadm_init_message_not_exists.stdout_lines[-2:] |  map("regex_replace", ".* \\", "\1") | join("") }}'
   become: yes
   become_user: root
   when: not pki_status.stat.exists
