--- a/roles/k8s-master/tasks/main.yml
+++ b/roles/k8s-master/tasks/main.yml
@@ -99,13 +99,13 @@
   when: not pki_status.stat.exists
 
 - debug:
-    msg: '{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join("") | replace ("\"", "") }}'
+    msg: '{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join("") | replace ("\", "") }}'
 
 - fail:
 
 - name: "Create join master fact"
   set_fact:
-    join_master: '{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join("") | replace ("\"", "") }}'
+    join_master: '{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join("") | replace ("\", "") }}'
   become: yes
   become_user: root
   when: not pki_status.stat.exists
