--- a/roles/config-bashrc/tasks/main.yml
+++ b/roles/config-bashrc/tasks/main.yml
@@ -5,9 +5,9 @@
   become: yes
   become_user: root
 
-- name: Copy .bash_profile
+- name: Copy .profile
   template:
     src: bashrc.j2
-    dest: /root/.bash_profile
+    dest: /root/.profile
   become: yes
   become_user: root
