--- a/roles/k8s-cert-manager/tasks/main.yml
+++ b/roles/k8s-cert-manager/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: "Helm List"
-  command: helm list
+  command: /usr/local/bin/helm list
   become: yes
   become_user: root
   register: helm_list
@@ -11,7 +11,7 @@
   become_user: root
 
 - name: "Install Cert Manager"
-  command: helm install --name cert-manager --set webhook.enabled=false --namespace kube-system stable/cert-manager
+  command: /usr/local/bin/helm install --name cert-manager --set webhook.enabled=false --namespace kube-system stable/cert-manager
   become: yes
   become_user: root
   when: "'cert-manager' not in helm_list.stdout"
