--- a/roles/k8s-nfs-provisioner/tasks/main.yml
+++ b/roles/k8s-nfs-provisioner/tasks/main.yml
@@ -1,12 +1,12 @@
 - name: "Helm List"
-  command: helm list
+  command: /usr/local/bin/helm list
   become: yes
   become_user: root
   register: helm_list
   changed_when: False
 
 - name: "Install Cert Manager"
-  command: helm install --name nfs-provisioner --set nfs.server=10.16.103.9 --set nfs.path=/zpool-126262/K8SNFS stable/nfs-client-provisioner
+  command: /usr/local/bin/helm install --name nfs-provisioner --set nfs.server=10.16.103.9 --set nfs.path=/zpool-126262/K8SNFS stable/nfs-client-provisioner
   become: yes
   become_user: root
   when: "'nfs-provisioner' not in helm_list.stdout"
