--- a/roles/k8s-master/tasks/main.yml
+++ b/roles/k8s-master/tasks/main.yml
@@ -83,10 +83,9 @@
   become_user: root
   when: pki_status.stat.exists
 
-
 - name: "Create join master fact"
   set_fact:
-    join_master: '{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join("") | replace("\", "") }}'
+    join_master: '{{ kubeadm_init_message_exists.stdout_lines[-2:] | map("removeBackSlash") | join("") }}'
   become: yes
   become_user: root
   when: pki_status.stat.exists
