--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -20,7 +20,12 @@
   become: yes
   become_user: root
 
-- command: yum install -y http://vault.centos.org/centos/7.3.1611/extras/x86_64/Packages/container-selinux-2.9-4.el7.noarch.rpm
+- name: Install container-selinux
+  yum:
+    name: http://vault.centos.org/centos/7.3.1611/extras/x86_64/Packages/container-selinux-2.9-4.el7.noarch.rpm
+    state: present
+    update_cache: True
+    validate_certs: false
   become: yes
   become_user: root
   ignore_errors: True
