--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 roles_path = roles
 
-private_key_file = ../bastion-key.pem
-remote_user = ec2-user
+#private_key_file = ../bastion-key.pem
+#remote_user = ec2-user
 
 # disable SSH key host checking
 host_key_checking = False
@@ -10,8 +10,8 @@ host_key_checking = False
 #stdout_callback = debug
 #stderr_callback = debug
 
-[inventory]
-enable_plugins = host_list, script, yaml, ini, auto
+#[inventory]
+#enable_plugins = host_list, script, yaml, ini, auto
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto  -o ControlPersist=60s
