--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -14,7 +14,7 @@
   become: yes
   become_user: root
 
-# TODO
+# LINT-ERROR
 - name: "Add Docker Repo"
   command: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
   become: yes
@@ -29,6 +29,7 @@
   become: yes
   become_user: root
   ignore_errors: True
+  when: "'tag_Name_master' in groups"
 
 - name: "Ensure a list of packages installed"
   yum:
