--- a/roles/k8s-cert-manager/tasks/main.yml
+++ b/roles/k8s-cert-manager/tasks/main.yml
@@ -5,6 +5,7 @@
   register: helm_list
   changed_when: False
 
+# LINT-ERROR
 - name: "Install Cert Manager CRDs"
   command: kubectl apply -f https://raw.githubusercontent.com/jetstack/cert-manager/release-0.6/deploy/manifests/00-crds.yaml
   become: yes
