--- a/roles/k8s-dashboard/tasks/main.yml
+++ b/roles/k8s-dashboard/tasks/main.yml
@@ -1,3 +1,4 @@
+# LINT-ERROR
 - name: Create K8s dashboard
   command: kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v1.10.1/src/deploy/recommended/kubernetes-dashboard.yaml
   become: yes
