--- a/roles/network/tasks/main.yml
+++ b/roles/network/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: "Updatesysctl variable net.bridge.bridge-nf-call-ip6tables"
   sysctl:
     name: net.bridge.bridge-nf-call-ip6tables
-    value: 1
+    value: "1"
   ignore_errors: True
   become: yes
   become_user: root
@@ -9,7 +9,7 @@
 - name: "Updatesysctl variable net.bridge.bridge-nf-call-iptables"
   sysctl:
     name: net.bridge.bridge-nf-call-iptables
-    value: 1
+    value: "1"
   ignore_errors: True
   become: yes
   become_user: root
@@ -23,11 +23,13 @@
   become_user: root
   ignore_errors: True
 
+# LINT-ERROR
 - name: "Clear iptables"
   shell: iptables -F && iptables -t nat -F && iptables -t mangle -F && iptables -X
   become: yes
   become_user: root
 
+# LINT-ERROR
 - name: "Clear ipvsadm"
   command: ipvsadm --clear
   become: yes
