--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 roles_path = roles
 
-#private_key_file = ../bastion-key.pem
-#remote_user = ec2-user
+private_key_file = ../MyKeyPair.pem
+remote_user = ec2-user
 
 # disable SSH key host checking
 host_key_checking = False
