--- a/roles/tools-common/tasks/main.yml
+++ b/roles/tools-common/tasks/main.yml
@@ -15,13 +15,14 @@
   become: yes
   become_user: root
   when: False
-  
+
 - name: "Ensure Packages are installed"
   yum:
     name: "{{ packages }}"
     state: present
     update_cache: True
     validate_certs: false
+    lock_timeout: 180
   vars:
     packages:
       - python-pip
