--- a/roles/k8s-slave/tasks/main.yml
+++ b/roles/k8s-slave/tasks/main.yml
@@ -8,12 +8,12 @@
 - name: "Set kubernetes master group"
   set_fact:
     kubernetes_master_group: 'kubernetes-master'
-  when: "'tag_Name_master' not in groups"
+  when: "'tag_Name_Master' not in groups"
 
 - name: "Set kubernetes master group"
   set_fact:
-    kubernetes_master_group: 'tag_Name_master'
-  when: "'tag_Name_master' in groups"
+    kubernetes_master_group: 'tag_Name_Master'
+  when: "'tag_Name_Master' in groups"
 
 - name: "Join cluster {{ hostvars[groups['kubernetes-master'][0]]['join_master'] }}"
   command: "{{ hostvars[groups['kubernetes-master'][0]]['join_master'] | replace('10.0.2.15', '10.0.0.2') }}"
@@ -21,7 +21,7 @@
   become_user: root
   when:
     - kubeadm.init.options is defined
-    - "'tag_Name_master' not in groups"
+    - "'tag_Name_Master' not in groups"
 
 - name: "Join cluster {{ hostvars[groups['kubernetes-master'][0]]['join_master'] }}"
   command: "{{ hostvars[groups['kubernetes-master'][0]]['join_master'] }}"
@@ -29,20 +29,20 @@
   become_user: root
   when:
     - kubeadm.init.options is not defined
-    - "'tag_Name_master' not in groups"
+    - "'tag_Name_Master' not in groups"
 
 - name: "Join cluster {{ hostvars[groups[kubernetes_master_group][0]]['join_master'] }}"
-  command: "{{ hostvars[groups['tag_Name_master'][0]]['join_master'] | replace('10.0.2.15', '10.0.0.2') }}"
+  command: "{{ hostvars[groups['tag_Name_Master'][0]]['join_master'] | replace('10.0.2.15', '10.0.0.2') }}"
   become: yes
   become_user: root
   when:
     - kubeadm.init.options is defined
-    - "'tag_Name_master' in groups"
+    - "'tag_Name_Master' in groups"
 
 - name: "Join cluster {{ hostvars[groups[kubernetes_master_group][0]]['join_master'] }}"
-  command: "{{ hostvars[groups['tag_Name_master'][0]]['join_master'] }}"
+  command: "{{ hostvars[groups['tag_Name_Master'][0]]['join_master'] }}"
   become: yes
   become_user: root
   when:
     - kubeadm.init.options is not defined
-    - "'tag_Name_master' in groups"
+    - "'tag_Name_Master' in groups"
