--- a/roles/k8s-cert-manager/tasks/main.yml
+++ b/roles/k8s-cert-manager/tasks/main.yml
@@ -6,13 +6,39 @@
   changed_when: False
 
 # LINT-ERROR
-- name: "Install Cert Manager CRDs"
-  command: kubectl apply -f https://raw.githubusercontent.com/jetstack/cert-manager/release-0.6/deploy/manifests/00-crds.yaml
+- name: "Install the CustomResourceDefinition resources separately"
+  command: kubectl apply -f https://raw.githubusercontent.com/jetstack/cert-manager/release-0.8/deploy/manifests/00-crds.yaml
   become: yes
   become_user: root
 
-- name: "Install Cert Manager"
-  command: /usr/local/bin/helm install --name cert-manager --set webhook.enabled=false --namespace kube-system stable/cert-manager
+- name: "Create the namespace for cert-manager"
+  command: kubectl create namespace cert-manager
+  become: yes
+  become_user: root
+
+- name: "Label the cert-manager namespace to disable resource validation"
+  command: kubectl label namespace cert-manager certmanager.k8s.io/disable-validation=true
+  become: yes
+  become_user: root
+
+- name: "Add the Jetstack Helm repository"
+  command: helm repo add jetstack https://charts.jetstack.io
+  become: yes
+  become_user: root
+
+- name: "Update your local Helm chart repository cache"
+  command: helm repo update
+  become: yes
+  become_user: root
+
+- name: "Install the cert-manager Helm chart"
+  command: /usr/local/bin/helm install --name cert-manager --namespace cert-manager --set webhook.enabled=false jetstack/cert-manager
+  become: yes
+  become_user: root
+  when: "'cert-manager' not in helm_list.stdout"
+
+- name: "Install the cert-manager Helm chart"
+  command: kubectl create secret generic acme-route53 -n=kube-system --from-file=secret-access-key
   become: yes
   become_user: root
   when: "'cert-manager' not in helm_list.stdout"
