--- a/roles/k8s-cert-manager/tasks/main.yml
+++ b/roles/k8s-cert-manager/tasks/main.yml
@@ -10,11 +10,13 @@
   command: kubectl apply -f https://raw.githubusercontent.com/jetstack/cert-manager/release-0.8/deploy/manifests/00-crds.yaml
   become: yes
   become_user: root
+  when: "'cert-manager' not in helm_list.stdout"
 
 - name: "Create the namespace for cert-manager"
   command: kubectl create namespace cert-manager
   become: yes
   become_user: root
+  when: "'cert-manager' not in helm_list.stdout"
 
 - name: "Label the cert-manager namespace to disable resource validation"
   command: kubectl label namespace cert-manager certmanager.k8s.io/disable-validation=true
@@ -48,3 +50,4 @@
   loop_control:
     loop_var: namespace_item
   with_items: "{{ namespaces }}"
+  when: "'cert-manager' not in helm_list.stdout"
