--- a/roles/tool-helm/files/cluster-role-binding-admin.yaml
+++ b/roles/tool-helm/files/cluster-role-binding-admin.yaml
@@ -1,12 +1,18 @@
-apiVersion: rbac.authorization.k8s.io/v1
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: tiller
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: add-on-cluster-admin
+  name: tiller
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: default
-    namespace: kube-system
+    name: tiller
+    namespace: default
