--- a/roles/tool-helm/files/cluster-role-binding-admin.yaml
+++ b/roles/tool-helm/files/cluster-role-binding-admin.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: tiller
-  namespace: default
+  namespace: kube-system
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: tiller
@@ -15,4 +15,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: tiller
-    namespace: default
+    namespace: kube-system
