--- a/roles/tool-helm/files/cluster-role-binding-tiller.yaml
+++ b/roles/tool-helm/files/cluster-role-binding-tiller.yaml
@@ -1,12 +1,18 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: tiller
+  namespace: kube-system
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: add-on-cluster-helm
+  name: tiller
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: default
-    namespace: default
+    name: tiller
+    namespace: kube-system
