--- a/roles/tool-helm/files/cluster-role-binding-tiller.yaml
+++ b/roles/tool-helm/files/cluster-role-binding-tiller.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: tiller
+  name: default
   namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -14,5 +14,5 @@ roleRef:
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: tiller
+    name: default
     namespace: kube-system
