--- a/roles/k8s-slave/tasks/main.yml
+++ b/roles/k8s-slave/tasks/main.yml
@@ -13,7 +13,7 @@
   become_user: root
 
 - name: "Join cluster {{ hostvars[groups['kubernetes-master'][0]]['join_master'] }}"
-  command: "{{ hostvars[groups['kubernetes-master'][0]]['join_master'] --config=/tmp/kubeadm-init.yaml | replace('10.0.2.15', '10.0.0.2') }}"
+  command: "{{ hostvars[groups['kubernetes-master'][0]]['join_master'] | replace('10.0.2.15', '10.0.0.2') }} --config=/tmp/kubeadm-init.yaml"
   become: yes
   become_user: root
   when: kubeadm.init.options is defined
