--- a/roles/k8s-nfs-provisioner/tasks/main.yml
+++ b/roles/k8s-nfs-provisioner/tasks/main.yml
@@ -5,7 +5,7 @@
   register: helm_list
   changed_when: False
 
-- name: "Install Cert Manager"
+- name: "Install the nfs-provisioner chart"
   command: /usr/local/bin/helm install --name nfs-provisioner --set nfs.server=10.16.103.9 --set nfs.path=/zpool-126262/K8SNFS stable/nfs-client-provisioner
   become: yes
   become_user: root
