--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,6 +10,8 @@ host_key_checking = False
 #stdout_callback = debug
 #stderr_callback = debug
 
+timeout=60
+
 #[inventory]
 #enable_plugins = host_list, script, yaml, ini, auto
 
