--- a/roles/facts/tasks/main.yml
+++ b/roles/facts/tasks/main.yml
@@ -1,6 +1,11 @@
-- name: "Add Docker Repo"
+- name: "Compute Public IP"
   set_fact:
-    public_ip: "{{groups['tag_Name_Master'][0] | map('extract', hostvars, ['ansible_host'])}}"
+    public_ip: "{{groups['tag_Name_Node'][0] | map('extract', hostvars, ['ansible_host'])}}"
   when:
     - public_ip is not defined
-    - "'tag_Name_Master' in groups"
+    - "'tag_Name_Node' in groups"
+
+- debug:
+    msg: "{{public_ip}}"
+
+- fail:
