--- a/roles/k8s-ingress-nginx/tasks/main.yml
+++ b/roles/k8s-ingress-nginx/tasks/main.yml
@@ -1,16 +1,3 @@
-# LINT-ERROR
-- name: "Mandatory Command"
-  command: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/mandatory.yaml
-  become: yes
-  become_user: root
-
-- name: Create Service
-  k8s_raw:
-    state: present
-    definition: "{{ lookup('template', 'service.j2') }}"
-  become: yes
-  become_user: root
-
 - name: "Copy Resources"
   template:
     src: "templates/patch.yml"
@@ -22,15 +9,15 @@
   ignore_errors: True
   become: yes
 
-#- name: "Helm List"
-#  command: /usr/local/bin/helm list
-#  become: yes
-#  become_user: root
-#  register: helm_list
-#  changed_when: False
+- name: "Helm List"
+  command: /usr/local/bin/helm list
+  become: yes
+  become_user: root
+  register: helm_list
+  changed_when: False
 
-#- name: "Install the nginx-ingress Helm chart"
-#  command: /usr/local/bin/helm install --name nginx-ingress stable/nginx-ingress --set controller.service.enableHttps=false
-#  become: yes
-#  become_user: root
-#  when: "'nginx-ingress' not in helm_list.stdout"
+- name: "Install the nginx-ingress Helm chart"
+  command: /usr/local/bin/helm install --name nginx-ingress stable/nginx-ingress --set controller.service.enableHttps=false --set controller.service.externalIPs="{{public_ip}}"
+  become: yes
+  become_user: root
+  when: "'nginx-ingress' not in helm_list.stdout"
