--- a/roles/facts/tasks/main.yml
+++ b/roles/facts/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: "Compute Public IP"
   set_fact:
-    public_ip: "{{groups['tag_Name_Node'][0] }}"
+    public_ip: "{{groups['tag_Name_Node'][0] | replace(' ', '') }}"
   when:
     - public_ip is not defined
     - "'tag_Name_Node' in groups"
