--- a/roles/k8s-ingress-nginx/tasks/main.yml
+++ b/roles/k8s-ingress-nginx/tasks/main.yml
@@ -3,12 +3,6 @@
     src: "templates/patch.yml"
     dest: "/tmp/patch.yml"
 
-# LINT-ERROR
-- name: Patch ConfigMap
-  shell: kubectl patch configmap nginx-configuration -n ingress-nginx --patch "$(cat /tmp/patch.yml)"
-  ignore_errors: True
-  become: yes
-
 - name: "Helm List"
   command: /usr/local/bin/helm list
   become: yes
@@ -21,3 +15,10 @@
   become: yes
   become_user: root
   when: "'nginx-ingress' not in helm_list.stdout"
+
+# LINT-ERROR
+- name: Patch ConfigMap
+  shell: kubectl patch configmap nginx-configuration -n ingress-nginx --patch "$(cat /tmp/patch.yml)"
+  ignore_errors: True
+  become: yes
+  when: False
