--- a/roles/k8s-ingress-nginx/tasks/main.yml
+++ b/roles/k8s-ingress-nginx/tasks/main.yml
@@ -16,6 +16,13 @@
   become_user: root
   when: "'nginx-ingress' not in helm_list.stdout"
 
+- name: Create Service
+  k8s_raw:
+    state: present
+    definition: "{{ lookup('template', 'service.j2') }}"
+  become: yes
+  become_user: root
+
 # LINT-ERROR
 - name: Patch ConfigMap
   shell: kubectl patch configmap nginx-configuration -n ingress-nginx --patch "$(cat /tmp/patch.yml)"
