--- a/roles/k8s-ingress-nginx/tasks/main.yml
+++ b/roles/k8s-ingress-nginx/tasks/main.yml
@@ -11,7 +11,7 @@
   changed_when: False
 
 - name: "Install the nginx-ingress Helm chart"
-  command: /usr/local/bin/helm install --name nginx-ingress stable/nginx-ingress --set controller.service.enableHttps=false --set controller.service.externalIPs[0]="{{public_ip}}"
+  command: /usr/local/bin/helm install --name nginx-ingress stable/nginx-ingress --set controller.service.externalIPs[0]="{{public_ip}}"
   become: yes
   become_user: root
   when: "'nginx-ingress' not in helm_list.stdout"
