--- a/roles/util-crond/tasks/main.yml
+++ b/roles/util-crond/tasks/main.yml
@@ -3,7 +3,7 @@
     name: "{{ packages }}"
     state: present
     update_cache: True
-#    lock_timeout: 180
+    lock_timeout: 180
   vars:
     packages:
     - mailx
