--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -26,7 +26,7 @@
     state: present
     update_cache: True
     validate_certs: false
-#    lock_timeout: 180
+    lock_timeout: 180
   become: yes
   become_user: root
   ignore_errors: True
