--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -22,7 +22,7 @@
 
 - name: Install container-selinux
   yum:
-    name: http://vault.centos.org/centos/7.3.1611/extras/x86_64/Packages/container-selinux-2.9-4.el7.noarch.rpm
+    name: http://mirror.centos.org/centos/7/extras/x86_64/Packages/container-selinux-2.74-1.el7.noarch.rpm
     state: present
     update_cache: True
     validate_certs: false
@@ -31,7 +31,7 @@
   become_user: root
   ignore_errors: True
   when: False
-#  when: "'tag_Name_Master' in groups"
+  when: "'tag_Name_Master' in groups"
 
 - name: "Ensure a list of packages installed"
   yum:
