--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -23,7 +23,7 @@
 - name: Install container-selinux
   yum:
     name: http://mirror.centos.org/centos/7/extras/x86_64/Packages/container-selinux-2.74-1.el7.noarch.rpm
-    state: present
+    state: latest
     update_cache: True
     validate_certs: false
     lock_timeout: 180
