--- a/roles/storage-mount-nfs/tasks/main.yml
+++ b/roles/storage-mount-nfs/tasks/main.yml
@@ -2,7 +2,7 @@
   yum:
     name: nfs-utils
     state: present
-#    lock_timeout: 180
+    lock_timeout: 180
   become: yes
 
 - include: config.yml
