--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -20,6 +20,11 @@
   become: yes
   become_user: root
 
+
+- name: Install container-selinux
+  command: amazon-linux-extras install docker
+  when: "'tag_Name_Master' in groups"
+
 - name: Install container-selinux
   yum:
     name: http://mirror.centos.org/centos/7/extras/x86_64/Packages/container-selinux-2.74-1.el7.noarch.rpm
@@ -30,7 +35,7 @@
   become: yes
   become_user: root
   ignore_errors: True
-  when: "'tag_Name_Master' in groups"
+  when: False
 
 - name: "Ensure a list of packages installed"
   yum:
@@ -45,6 +50,7 @@
       - lvm2
   become: yes
   become_user: root
+  when: False
 
 - name: "Create Groupe Docker"
   group:
