--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -24,7 +24,9 @@
 - name: Install container-selinux
   command: amazon-linux-extras install docker
   when: "'tag_Name_Master' in groups"
-
+  become: yes
+  become_user: root
+  
 - name: Install container-selinux
   yum:
     name: http://mirror.centos.org/centos/7/extras/x86_64/Packages/container-selinux-2.74-1.el7.noarch.rpm
