--- a/roles/k8s-ingress-nginx/tasks/main.yml
+++ b/roles/k8s-ingress-nginx/tasks/main.yml
@@ -8,7 +8,7 @@
   changed_when: False
 
 - name: "Install the nginx-ingress Helm chart"
-  command: /usr/local/bin/helm install --name nginx-ingress stable/nginx-ingress"
+  command: /usr/local/bin/helm install --name nginx-ingress --version 0.24.0 stable/nginx-ingress
   become: yes
   become_user: root
   when: "'nginx-ingress' not in helm_list.stdout"
