--- a/roles/k8s-cert-manager/templates/issuer.yaml
+++ b/roles/k8s-cert-manager/templates/issuer.yaml
@@ -19,7 +19,7 @@ spec:
         - name: dns
           route53:
             region: us-east-1
-            accessKeyID: AKIAZFKTAHHP5QOLFPBO
+            accessKeyID: {{aws_key}}
             secretAccessKeySecretRef:
               name: acme-route53
               key: secret-access-key
