--- a/roles/k8s-ingress-nginx/tasks/main.yml
+++ b/roles/k8s-ingress-nginx/tasks/main.yml
@@ -1,4 +1,7 @@
-
+- name: "Copy Resources"
+  template:
+    src: "templates/patch.yml"
+    dest: "/tmp/patch.yml"
 
 - name: "Helm List"
   command: /usr/local/bin/helm list
@@ -12,3 +15,9 @@
   become: yes
   become_user: root
   when: "'nginx-ingress' not in helm_list.stdout"
+
+# LINT-ERROR
+- name: Patch ConfigMap
+  shell: kubectl patch configmap nginx-ingress-controller --patch "$(cat /tmp/patch.yml)"
+  ignore_errors: True
+  become: yes
