--- a/roles/app-secrets/tasks/create-docker-secret.yml
+++ b/roles/app-secrets/tasks/create-docker-secret.yml
@@ -3,6 +3,7 @@
   register: command_result
   become: yes
   become_user: root
+  changed_when: False
 
 - name: Create Secret if not exists
   command: "kubectl create secret docker-registry {{ item.name }} --docker-server={{ item.server }} --docker-username={{ item.username }} --docker-password={{ item.password }} --docker-email={{ item.email }} -n {{ item.namespace }}"
